updating user auth

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
     <script src="components/auth/login/login.js"></script>
     <script src="components/auth/logout/logout.js"></script>
     <script src="components/auth/signup/signup.js"></script>
+    <script src='components/profile/profile.js'></script>
 
 </body>
 
