email password reset

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,9 @@
     <script src="components/auth/auth.js"></script>
     <script src="components/auth/login/login.js"></script>
     <script src="components/auth/logout/logout.js"></script>
+    <script src="components/auth/forgot/forgot.js"></script>
     <script src="components/auth/signup/signup.js"></script>
+    <script src="components/auth/reset/reset.js"></script>
     <script src='components/profile/profile.js'></script>
 
 </body>
