--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>BookList</title>
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
@@ -41,7 +43,9 @@
     <script src="components/auth/auth.js"></script>
     <script src="components/auth/login/login.js"></script>
     <script src="components/auth/logout/logout.js"></script>
+    <script src="components/auth/forgot/forgot.js"></script>
     <script src="components/auth/signup/signup.js"></script>
+    <script src="components/auth/reset/reset.js"></script>
     <script src='components/profile/profile.js'></script>
 
 </body>
